--- a/dev/scss/base/_fonts.scss
+++ b/dev/scss/base/_fonts.scss
@@ -1,14 +1,12 @@
-@include font('Gilroy', 'Gilroy-Regular', normal, 400);
-@include font('Gilroy', 'Gilroy-Medium', normal, 500);
-@include font('Gilroy', 'Gilroy-MediumItalic', italic, 500);
-@include font('Gilroy', 'Gilroy-SemiBold', normal, 600);
-@include font('Gilroy', 'Gilroy-Bold', normal, 700);
-@include font('Gilroy', 'Gilroy-Black', normal, 900);
-@include font('Ika', 'IkaTrial-ExtraBold', normal, 800);
-@include font('PragmaticaExtendet', 'PragmaticaExtended-Light', normal, 300);
-@include font('PragmaticaExtendet', 'PragmaticaExtended-Bold', normal, 700);
-@include font('PragmaticaExtendet', 'PragmaticaExtended-Black', normal, 900);
-@include font('SFP', 'SFProDisplay-Regular', normal, 400);
+@include font('Montserrat', 'Montserrat-Regular', normal, 400);
+@include font('Montserrat', 'Montserrat-Medium', normal, 500);
+@include font('Montserrat', 'Montserrat-SemiBold', normal, 600);
+@include font('Montserrat', 'Montserrat-Bold', normal, 700);
+@include font('Roboto', 'Roboto-Light', normal, 300);
+@include font('Roboto', 'Roboto-Regular', normal, 400);
+@include font('Roboto', 'Roboto-Bold', normal, 500);
+@include font('Segoe', 'SegoeUI', normal, 400);
+@include font('Segoe', 'SegoeUI-SemiBold', normal, 600);
 
 
 
