--- a/dev/scss/components/_iframe.scss
+++ b/dev/scss/components/_iframe.scss
@@ -1,11 +1,9 @@
 .iframe-preload {
-	border-radius: 40px;
 }
 
 .iframe-video {
 	iframe {
 		border: 0;
-		border-radius: 40px;
 	}
 }
 
@@ -14,23 +12,18 @@
 	transition: .3s ease-in-out;
 
 	&:hover, &:focus {
-		svg {
-			transform: scale(1.1);
-			fill: $color-primary;
-
+		svg .iframe-play__button-bg{
+			fill: #f00;
 		}
-
-		&:before {
-			transform: scale(.7);
+		svg{
+			opacity: 1;
 		}
-
-		background-color: rgba(#fff, 0);
 	}
 
 	svg {
-		transition: .3s ease-in-out;
-		width: 26px;
-		height: 26px;
+		opacity: .6;
+		width: 56px;
+		height: 56px;
 		fill: $color-secondary;
 		position: absolute;
 		top: 0;
@@ -39,31 +32,7 @@
 		bottom: 0;
 		margin: auto;
 	}
-
-	background-color: rgba(#fff, .6);
-	position: absolute;
-	width: 110px;
-	height: 110px;
-	border-radius: 50%;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	margin: auto;
-
-	&:before {
-		transition: .3s ease-in-out;
-		content: '';
-		background-color: #fff;
-		display: inline-block;
-		position: absolute;
-		width: 84px;
-		height: 84px;
-		border-radius: 50%;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		margin: auto;
+	svg .iframe-play__button-bg{
+		fill: black;
 	}
 }
