--- a/dev/scss/components/_inputs.scss
+++ b/dev/scss/components/_inputs.scss
@@ -9,6 +9,9 @@
 	border-width: 1px;
 	border-style: solid;
 }
+.c-input_style-secondary {
+	text-align: center;
+}
 
 .c-input_style-default.c-input_color-primary {
 	background-color: #FFFFFF;
@@ -32,7 +35,9 @@
 		border-color: #82A4E8;
 	}
 }
-
+.c-input_style-secondary.c-input_color-primary {
+	background-color: #F2F2F2;
+}
 .c-input_md {
 	padding: 14px 20px;
 	font-size: 16px;
