--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -15,8 +15,8 @@ $color-warning: #eb7805;
 /* FONTS */
 /****************************************************************************/
 
-$font-primary: Gilroy, sans-serif;
-$font-secondary: PragmaticaExtendet, sans-serif;
+$font-primary: Montserat, sans-serif;
+$font-secondary: Roboto, sans-serif;
 
 /****************************************************************************/
 /* BREAKPOINTS */
