--- a/dev/scss/layout/_main.scss
+++ b/dev/scss/layout/_main.scss
@@ -1,6 +1,223 @@
 body {
-	font-family: $font-primary;
-	font-weight: 400;
-	font-size: 16px;
-	line-height: 22px;
+  font-family: $font-primary;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  background-color: #fafafd;
+}
+
+.c-dropdown {
+  overflow: hidden;
+  transition: .1s max-height ease-in;
+  user-select: none;
+}
+
+.c-dropdown__title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  margin-bottom: 8px;
+  color: #555555;
+}
+
+.c-dropdown__item {
+  margin-top: 30px;
+}
+
+.c-dropdown__item + .c-dropdown__item {
+  margin-top: 20px;
+}
+
+.c-dropdown__item {
+  display: flex;
+  color: #7C7C7C;
+}
+
+.c-dropdown__icon_opened {
+  transform: rotate(180deg);
+}
+
+.c-dropdown__checkbox {
+  width: 20px;
+  height: 20px;
+  margin-right: 8px;
+}
+
+.c-icon-list {
+  display: inline-flex;
+  flex-direction: column;
+  height: 200px;
+  overflow-y: scroll;
+}
+
+.c-icon-list::-webkit-scrollbar {
+  display: none;
+}
+
+.c-icon-list__item {
+  width: max-content;
+  cursor: pointer;
+}
+
+.c-icon-list__item + .c-icon-list__item {
+  margin-top: 22px;
+}
+
+.c-category-card {
+  height: 100%;
+  background-color: #FFFFFF;
+  border: 1px solid #F2F2F2;
+  padding: 10px 10px 20px;
+}
+
+.c-category-card__prev {
+  height: 238px;
+  max-height: 100%;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.c-category-card__img {
+  max-width: 100%;
+}
+
+.c-category-card__title {
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.4;
+  color: #7C7C7C;
+  height: 2.8em;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+
+.c-simple-product-card {
+  height: 100%;
+}
+
+.c-simple-product-card__title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+  color: #7C7C7C;
+  margin-top: 10px;
+  height: 2.3em;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+
+.c-simple-product-card__img {
+  max-width: 100%;
+}
+
+.c-simple-product-card__body {
+  height: 157px;
+  max-height: 100%;
+  border: 1px solid #F2F2F2;
+  padding: 10px 18px;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+
+.c-news-card {
+  height: 100%;
+  background-color: #FFFFFF;
+  padding: 20px;
+  border-radius: 2px;
+}
+
+.c-news-card__title {
+  margin-bottom: 40px;
+  font-size: 18px;
+  line-height: 1.2;
+  color: #7C7C7C;
+  height: 2.4em;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+
+.c-news-card__date {
+  font-size: 14px;
+  line-height: 1.2;
+  color: #7C7C7C;
+}
+
+.c-news-card__prev {
+  height: 220px;
+  max-height: 100%;
+  margin-bottom: 20px;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.c-product-card {
+  border-radius: 6px;
+  background-color: #FFFFFF;
+  padding: 10px;
+}
+
+.c-product-card__prev{
+  padding: 10px;
+  margin-bottom: 2px;
+  height: 228px;
+  max-height: 100%;
+}
+
+.c-product-card__description{
+  margin-bottom: 10px;
+}
+
+
+
+
+.c-product-desc__text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.2;
+  height: 3.6em;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  color: #555555;
+}
+
+.c-product-desc__articul {
+  font-size: 12px;
+  color: #21458C;
+}
+
+.c-product-desc__price{
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.2;
+  color: #000000;
+}
+
+.c-product-desc__item + .c-product-desc__item{
+  margin-top: 10px;
+}
+
+.c-product-controls{
+  display: flex;
+}
+.c-product-controls__counter{
+  width: 100px;
+  flex-shrink: 0;
+  margin-right: 10px;
+}
+.c-product-controls__basket{
+flex-grow: 1;
 }
