--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -1,72 +1,107 @@
 .c-btn {
-	text-align: center;
-	text-decoration: none;
-	vertical-align: middle;
-	cursor: pointer;
-	border-radius: 25px;
-	max-width: 100%;
-	width: 100%;
-	border: 0;
-	outline: 0;
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	overflow: hidden;
-	transition: text-shadow .2s ease, box-shadow .2s ease;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  max-width: 100%;
+  width: 100%;
+  border: 0;
+  outline: 0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  transition: text-shadow .2s ease, box-shadow .2s ease;
 }
 
 .c-btn_style-default {
-	background-color: #FFFFFF;
-	color: #7C7C7C;
+  background-color: #FFFFFF;
+  color: #7C7C7C;
 
-	&:hover, &:focus {
-		background-color: #F2F2F2;
-	}
+  &:hover, &:focus {
+    background-color: #F2F2F2;
+  }
 }
 
 .c-btn_style-default.c-btn_color-primary {
-	background-color: #82A4E8;
-	color: #FFFFFF;
+  background-color: #82A4E8;
+  color: #FFFFFF;
 
-	&:hover, &:focus {
-		background-color: #6C95E8;
-	}
+  &:hover, &:focus {
+    background-color: #6C95E8;
+  }
 }
 
 .c-btn_style-default.c-btn_color-primary-dark {
-	background-color: #21458C;
-	color: #FFFFFF;
+  background-color: #21458C;
+  color: #FFFFFF;
 }
 
 .c-btn_style-default.c-btn_color-light {
-	background-color: #F2F2F2;
-	color: #7C7C7C;
+  background-color: #F2F2F2;
+  color: #7C7C7C;
 
-	&:hover, &:focus {
-		background-color: #7C7C7C;
-		color: #FFFFFF;
-	}
+  &:hover, &:focus {
+    background-color: #7C7C7C;
+    color: #FFFFFF;
+  }
 }
 
 .c-btn_sm {
-	height: 46px;
-	font-size: 14px;
-	line-height: 17px;
-	border-radius: 6px;
+  height: 46px;
+  font-size: 14px;
+  line-height: 17px;
+  border-radius: 6px;
 }
 
 .c-btn_md {
-	height: 48px;
-	font-size: 16px;
-	line-height: 20px;
-	border-radius: 4px;
+  height: 48px;
+  font-size: 16px;
+  line-height: 20px;
+  border-radius: 4px;
 }
 
 .c-btn_lg {
-	height: 60px;
-	font-size: 16px;
-	line-height: 20px;
-	border-radius: 4px;
+  height: 60px;
+  font-size: 16px;
+  line-height: 20px;
+  border-radius: 4px;
+}
+
+
+.c-btn_product-action {
+  background-color: transparent;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+}
+
+.c-btn_pagination {
+  background-color: transparent;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: 6px;
+  color: #7C7C7C;
+  cursor: pointer;
+  & .c-btn__icon path{
+    fill: currentColor;
+  }
+  &:focus{
+    border: 1px solid #82A4E8;
+  }
+  &:hover,&.active {
+    background-color: #82A4E8;
+    color: #FFFFFF;
+  }
 }
