--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -14,6 +14,14 @@
   text-overflow: ellipsis;
   overflow: hidden;
   transition: text-shadow .2s ease, box-shadow .2s ease;
+
+  &_width-md {
+    width: 226px;
+    max-width: 100%;
+  }
+
+  &_width-lg {
+  }
 }
 
 .c-btn_style-default {
@@ -94,13 +102,16 @@
   border-radius: 6px;
   color: #7C7C7C;
   cursor: pointer;
-  & .c-btn__icon path{
+
+  & .c-btn__icon path {
     fill: currentColor;
   }
-  &:focus{
+
+  &:focus {
     border: 1px solid #82A4E8;
   }
-  &:hover,&.active {
+
+  &:hover, &.active {
     background-color: #82A4E8;
     color: #FFFFFF;
   }
