--- a/dev/templates/kit.html
+++ b/dev/templates/kit.html
@@ -21,7 +21,7 @@
             <div class="row u-reset-indent">
                 <div class="col-2">
                     <div class="c-category-card">
-                        <div class="c-category-card__prev"
+                        <div class="c-category-card__preview"
                              style="background-image: url(https://pngicon.ru/file/uploads/koshka.png)">
                         </div>
                         <div class="c-category-card__title">Активное <br> оборудование</div>
@@ -29,7 +29,7 @@
                 </div>
                 <div class="col-2">
                     <div class="c-category-card">
-                        <div class="c-category-card__prev"
+                        <div class="c-category-card__preview"
                              style="background-image: url(https://pngicon.ru/file/uploads/koshka.png)">
                         </div>
                         <div class="c-category-card__title">Активное <br> оборудование</div>
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col-2">
                     <div class="c-category-card">
-                        <div class="c-category-card__prev"
+                        <div class="c-category-card__preview"
                              style="background-image: url(https://pngicon.ru/file/uploads/koshka.png)">
                         </div>
                         <div class="c-category-card__title">Активное <br> оборудование</div>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="col-2">
                     <div class="c-category-card">
-                        <div class="c-category-card__prev"
+                        <div class="c-category-card__preview"
                              style="background-image: url(https://pngicon.ru/file/uploads/koshka.png)">
                         </div>
                         <div class="c-category-card__title">Активное <br> оборудование</div>
@@ -53,7 +53,7 @@
                 </div>
                 <div class="col-2">
                     <div class="c-category-card">
-                        <div class="c-category-card__prev"
+                        <div class="c-category-card__preview"
                              style="background-image: url(https://pngicon.ru/file/uploads/koshka.png)">
                         </div>
                         <div class="c-category-card__title">Активное <br> оборудование</div>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="col-2">
                     <div class="c-category-card">
-                        <div class="c-category-card__prev"
+                        <div class="c-category-card__preview"
                              style="background-image: url(https://pngicon.ru/file/uploads/koshka.png)">
                         </div>
                         <div class="c-category-card__title">Активное <br> оборудование</div>
@@ -126,7 +126,7 @@
             <div class="row">
                 <div class="col-3">
                     <div class="c-news-card">
-                        <div class="c-news-card__prev"
+                        <div class="c-news-card__preview"
                              style="background-image: url(https://n1s2.hsmedia.ru/43/8e/85/438e85e1dcf8bc45fdb4738ad67e0523/728x485_1_676f156728d52a40cefbf4e88311021a@5000x3333_0xac120003_744610521626771276.jpg)">
                         </div>
                         <div class="c-news-card__title">Название новости, может быть в <br> несколько строк</div>
@@ -135,7 +135,7 @@
                 </div>
                 <div class="col-3">
                     <div class="c-news-card">
-                        <div class="c-news-card__prev"
+                        <div class="c-news-card__preview"
                              style="background-image: url(https://n1s2.hsmedia.ru/43/8e/85/438e85e1dcf8bc45fdb4738ad67e0523/728x485_1_676f156728d52a40cefbf4e88311021a@5000x3333_0xac120003_744610521626771276.jpg)">
                         </div>
                         <div class="c-news-card__title">Название новости, может быть в <br> несколько строк</div>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="col-3">
                     <div class="c-news-card">
-                        <div class="c-news-card__prev"
+                        <div class="c-news-card__preview"
                              style="background-image: url(https://n1s2.hsmedia.ru/43/8e/85/438e85e1dcf8bc45fdb4738ad67e0523/728x485_1_676f156728d52a40cefbf4e88311021a@5000x3333_0xac120003_744610521626771276.jpg)">
                         </div>
                         <div class="c-news-card__title">Название новости, может быть в <br> несколько строк</div>
@@ -153,7 +153,7 @@
                 </div>
                 <div class="col-3">
                     <div class="c-news-card">
-                        <div class="c-news-card__prev"
+                        <div class="c-news-card__preview"
                              style="background-image: url(https://n1s2.hsmedia.ru/43/8e/85/438e85e1dcf8bc45fdb4738ad67e0523/728x485_1_676f156728d52a40cefbf4e88311021a@5000x3333_0xac120003_744610521626771276.jpg)">
                         </div>
                         <div class="c-news-card__title">Название новости, может быть в <br> несколько строк</div>
@@ -424,7 +424,7 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="c-product-card__prev">
+                        <div class="c-product-card__preview">
                             <img alt="" src="https://www.pngmart.com/files/1/Cat-Jump-PNG.png">
                         </div>
                         <div class="c-product-card__description">
@@ -481,7 +481,7 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="c-product-card__prev">
+                        <div class="c-product-card__preview">
                             <img alt="" src="https://www.pngmart.com/files/1/Cat-Jump-PNG.png">
                         </div>
                         <div class="c-product-card__description">
@@ -528,7 +528,7 @@
         <div class="col-5">
             <div class="c-product-card c-product-card_lg">
 
-                <div class="c-product-card__prev">
+                <div class="c-product-card__preview">
                     <img alt="" src="https://www.pngmart.com/files/1/Cat-Jump-PNG.png">
                 </div>
                 <div class="c-product-card__body">
@@ -593,7 +593,7 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="c-product-card__prev">
+                        <div class="c-product-card__preview">
                             <img alt="" src="https://www.pngmart.com/files/1/Cat-Jump-PNG.png">
                         </div>
                         <div class="c-product-card__body">
