--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -14,7 +14,11 @@
   text-overflow: ellipsis;
   overflow: hidden;
   transition: text-shadow .2s ease, box-shadow .2s ease;
-
+&_slider-nav{
+  width: 52px;
+  height: 52px;
+  background-color: #FFFFFF;
+}
   &_width-md {
     width: 226px;
     max-width: 100%;
