--- a/dev/templates/index.html
+++ b/dev/templates/index.html
@@ -12,7 +12,29 @@
 </head>
 <body>
 <div class="c-section c-section_lg pt-0">
-    <img alt="" src="images/banner.jpg">
+    <h1 class="visually-hidden">Телекоммуникационные и серверные
+        шкафы ntss</h1>
+    <div class="c-main-banner">
+        <div class="owl-carousel c-slider c-slider_h-100" data-main-slider="3">
+            <div class="c-slider__item" style="background-image: url(images/banner.jpg);">
+                <div class="row" style="color: white; font-size: 40px; line-height: 1.4; margin-top: 150px; text-transform:uppercase;">
+                    <div class="offset-6 col-4">
+                        Телекоммуникационные и серверные
+                        <b>шкафы ntss</b>
+                    </div>
+                </div>
+            </div>
+            <div class="c-slider__item" style="background-image: url(images/banner.jpg);">
+                <div class="row" style="color: white; font-size: 40px; line-height: 1.4; margin-top: 150px; text-transform:uppercase;">
+                    <div class="offset-6 col-4">
+                        Телекоммуникационные и серверные
+                        <b>шкафы ntss</b>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 <div class="container">
     <div class="c-section c-section_lg">
@@ -91,7 +113,7 @@
                 </div>
                 <div class="col-6 offset-1">
                     <div class="slider-wrap">
-                        <div class="owl-carousel c-slider" data-main-slider="1">
+                        <div class="owl-carousel c-slider" data-main-slider="2">
                             <div class="c-slider__item">
                                 <div class="row c-product-list c-product-list_md">
                                     <div class="col-4 c-product-list__item">
@@ -157,7 +179,7 @@
                                 </div>
                             </div>
                             <div class="c-slider__item">
-                                <div class="c-product-list row">
+                                <div class="c-product-list c-product-list_md row">
                                     <div class="c-product-list__item col-4">
                                         <div class="c-product-card c-product-card_md c-product-card_events">
                                             <div class="c-product-card__actions c-icon-list">
@@ -458,7 +480,7 @@
 </div>
 <div class="c-section c-section_lg u-bg-tertiary">
 
-    <div class="owl-carousel c-slider" data-main-slider="2">
+    <div class="owl-carousel c-slider c-slider_w-auto" data-main-slider="3">
         <div class="c-slider__item">
             <img alt="" src="images/banner_download.png">
         </div>
