footer/header/breadcrumbs

--- a/dev/templates/selection.html
+++ b/dev/templates/selection.html
@@ -8,10 +8,41 @@
     <link href="css/jquery.selectBoxIt.css" rel="stylesheet">
     <link href="css/magnific-popup.css" rel="stylesheet">
     <link href="css/datepicker.css" rel="stylesheet">
+    <link href="css/owl.carousel.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
     <link href="template_styles.css" rel="stylesheet">
 </head>
 <body>
+<header class="c-header">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-1"><a class="c-header__logo" href="#"><img alt="" src="images/logo.png"></a></div>
+            <div class="col-9">
+                <ul class="c-top-menu row">
+                    <li class="col-auto c-top-menu__item"><a class="c-top-menu__link" href="#">Продукты и решения</a></li>
+                    <li class="col-auto c-top-menu__item c-top-menu__item_active"><a class="c-top-menu__link" href="#">Подбор по параметрам</a></li>
+                    <li class="col-auto c-top-menu__item"><a class="c-top-menu__link" href="#">Гарантия</a></li>
+                    <li class="col-auto c-top-menu__item"><a class="c-top-menu__link" href="#">Защита в проекте</a></li>
+                    <li class="col-auto c-top-menu__item"><a class="c-top-menu__link" href="#">Контакты</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</header>
+<div class="container">
+    <div class="c-breadcrumbs">
+        <ul class="c-breadcrumbs__list">
+            <li class="c-breadcrumbs__item">
+                <a href="#" class="c-breadcrumbs__link">
+                    <span class="c-breadcrumbs__title"><img width="14" height="14" src="images/home.png" alt=""></span>
+                </a>
+            </li>
+            <li class="c-breadcrumbs__item">
+                <span class="c-breadcrumbs__title">Подбор по параметрам</span>
+            </li>
+        </ul>
+    </div>
+</div>
 <div class="container mt-5">
     <div class="row mb-1">
         <div class="col-4">
@@ -1833,6 +1864,7 @@
 <script src="js/jquery.magnific-popup.js"></script>
 <script src="js/datepicker.js"></script>
 <script src="js/jquery.mask.js"></script>
+<script src="js/owl.carousel.js"></script>
 <script src="js/script.js"></script>
 </html>
 
