--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -42,9 +42,99 @@
   height: 62px;
   justify-content: center;
   align-items: center;
+
   &:hover, &:focus {
     color: #82A4E8;
     border-bottom: 1px solid #82A4E8;
   }
 
+}
+
+.c-header-search {
+  position: absolute;
+  top: -12px;
+  right: -5px;
+  &__submit {
+    position: absolute;
+    top: 9px;
+    right: 12px;
+    width: auto;
+    background-color: transparent;
+  }
+
+  &__inner {
+    height: 62px;
+    display: flex;
+    align-items: center;
+  }
+
+  &__form {
+    width: 880px;
+    position: relative;
+  }
+
+  & .c-input {
+    width: 100%;
+    padding-right: 50px;
+  }
+}
+
+.c-header-icon-list {
+  display: flex;
+  margin-left: -8px;
+  margin-right: -8px;
+  align-items: center;
+  justify-content: flex-end;
+
+  &__item {
+    padding-left: 8px;
+    padding-right: 8px;
+    position: relative;
+  }
+
+  &__btn {
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    border-radius: 5px;
+    transition: background-color .2s ease-in;
+    padding: 5px;
+
+    &:hover, &:focus {
+      background-color: rgba(#82A4E8, .1);
+    }
+  }
+
+  &__icon {
+    display: inline-flex;
+  }
+
+  &__count-text {
+    position: relative;
+    z-index: 1;
+    margin: 4px;
+    color: #FFFFFF;
+    font-size: 12px;
+    line-height: 1;
+  }
+
+  &__count {
+    margin-left: 6px;
+    position: relative;
+    min-width: 20px;
+    min-height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &:after {
+      content: "";
+      position: absolute;
+      display: block;
+      background-color: #82A4E8;
+      border-radius: 10px;
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
