--- a/dev/scss/layout/_main.scss
+++ b/dev/scss/layout/_main.scss
@@ -542,16 +542,19 @@ body {
     display: flex;
     justify-content: center;
   }
-  &_w-auto{
+
+  &_w-auto {
     .owl-item img {
       width: auto;
     }
   }
-&_h-100{
-  .c-slider__item{
-    height: 100%;
+
+  &_h-100 {
+    .c-slider__item {
+      height: 100%;
+    }
   }
-}
+
   & .owl-stage {
     display: flex;
     justify-content: center;
@@ -576,6 +579,12 @@ body {
   text-decoration: none;
   display: block;
   color: inherit;
+
+  &_events {
+    &:hover, &:focus {
+      color: #82A4E8;
+    }
+  }
 }
 
 .slide-desc {
@@ -588,9 +597,76 @@ body {
   background-color: #21458C;
 }
 
-.c-main-banner{
+.c-main-banner {
   height: 534px;
-  & .owl-item{
+
+  & .owl-item {
     height: 534px;
   }
+
+  &__title {
+    color: white;
+    font-size: 40px;
+    line-height: 1.4;
+    margin-top: 150px;
+    text-transform: uppercase;
+  }
+}
+
+.c-secondary-banner {
+  display: block;
+  position: relative;
+  height: 384px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  transition: box-shadow .2s ease-in-out;
+
+  &:hover, &:focus {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 64px 49px -2px inset, rgba(0, 0, 0, 0.3) 0px 19px 66px -18px inset;
+  }
+
+  &__title {
+    color: #000000;
+    font-size: 40px;
+    line-height: 1.4;
+    text-transform: uppercase;
+    position: absolute;
+    left: 307px;
+    top: 57px;
+  }
+}
+
+.c-sign-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 160px;
+  margin-bottom: 160px;
+  &__body{
+    width: 850px;
+    max-width: 100%;
+  }
+  &__title{
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 1.2;
+    text-transform: uppercase;
+    color: #555555;
+    margin-bottom: 40px;
+    text-align: center;
+  }
+  &__item {
+    width: 100%;
+    & + & {
+      margin-top: 20px;
+    }
+
+    &:last-child {
+      margin-top: 30px;
+    }
+  }
+}
+.u-text-red{
+  color: red;
 }
