--- a/dev/templates/selection.html
+++ b/dev/templates/selection.html
@@ -16,7 +16,7 @@
 <header class="c-header">
     <div class="container">
         <div class="row align-items-center">
-            <div class="col-1"><a class="c-header__logo" href="#"><img alt="" src="images/logo.png"></a></div>
+            <div class="col-1"><a class="c-header__logo" href="index.html"><img alt="" src="images/logo.png"></a></div>
             <div class="col-9">
                 <ul class="c-top-menu row">
                     <li class="col-auto c-top-menu__item"><a class="c-top-menu__link" href="#">Продукты и решения</a></li>
